19848
It's not obvious that keyword {{implicit}} means "implicit parameter list" when it is not the first token in a parameter list.

This matters for class parameters, which may have other modifiers.

{code}
scala> class C(protected implicit val s: String, i: Int)
defined class C

scala> implicit val z = "hello"
z: String = hello

scala> new C()
<console>:13: error: could not find implicit value for parameter i: Int
       new C()
       ^
{code}

["What does 'override implicit' mean?"|http://stackoverflow.com/questions/32828842/what-does-override-implicit-mean] is a good ice breaker for a job interview. 

